--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin:0;
     padding: 0;
+    font-family: Arial;
 }
 
 
@@ -25,12 +26,62 @@ header{
 #title{
     display: inline-block;
     font-size: 70px;
-    font-family: Arial;
     vertical-align: top;
 }
 
 /* Body configuration */
 
 body{
-    background-color: rgb(246, 248, 249);
+    /* background-color: rgb(246, 248, 249); */
+    background-color: black;
+}
+
+main{
+    background-color: white;
+    width: 80%;
+    height: 60%;
+    margin: 5% auto 2%;
+    border-radius: 5px;
+}
+
+.command-section{
+    background-color: white;
+    width: 100%;
+    height: 70%;
+    border-radius: 5px;
+}
+
+.command-button{
+    width: 100%;
+    height: 100%;
+    margin-left: 2%;
+    
+}
+
+.add-task-button{
+    margin: 1%;
+    margin-right: 0.1%;
+    height: 5%;
+    width: 5%;
+    background-color: rgb(71, 173, 241);
+    text-align: center;
+    padding: 0.5%;
+    border: 0;
+    border-radius: 5px;
+    color: white;
+
+}
+
+.add-section-button{
+    margin: 1%;
+    margin-left: 0.1%;
+    height: 5%;
+    width: 7%;
+    text-align: center;
+    padding: 0.5%;
+    border: 0;
+    border-radius: 5px;
+    background-color: white;
+    border: 1px solid rgb(176, 178, 179);
+    color: rgb(176, 178, 179);
 }
