--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@
     color: rgb(119, 230, 202);
     border: 1px solid rgb(119, 230, 202);
     border-radius: 50%;
+    margin-right: 0.5%;
 }
 /* cross configuration */
 
@@ -99,6 +100,7 @@
     color: rgb(236, 87, 77);
     border: 1px solid rgb(236, 87, 77);
     border-radius: 50%;
+    margin-right: 0.5%;
 }
 
 /* Title with logo configuration */
@@ -127,14 +129,12 @@ header{
 /* Body configuration */
 
 body{
-    /* background-color: rgb(246, 248, 249); */
-    background-color: black;
+    background-color: rgb(246, 248, 249);
 }
 
 
 
 main{
-    background-color: white;
     width: 80%;
     height: 60%;
     margin: 5% auto 2%;
@@ -147,6 +147,7 @@ main{
     width: 100%;
     height: 20%;
     border-radius: 5px;
+    margin-bottom: 0.5%;
 }
 
 .command-button{
@@ -192,14 +193,20 @@ main{
     width: 100%;
     height: 80%;
     padding-top: 5%;
-    margin-top: 1%;
     padding-left: 2%;
+    padding-bottom: 5%;
+    border-radius: 5px;
 }
-
-/* list configuration */
 
 .list{
     list-style-type: none;
 }
 
+li{
+    margin-bottom: 2%;
+}
 
+p{
+    font-size: 150%;
+    font-weight: 700;
+}
