--- a/css/style.css
+++ b/css/style.css
@@ -162,13 +162,20 @@ main{
     margin-right: 0.1%;
     height: 5%;
     width: 6%;
-    background-color: rgb(71, 173, 241);
     text-align: center;
     padding: 0.5%;
-    border: 0;
     border-radius: 5px;
-    color: white;
+    border: 1px solid rgb(176, 178, 179);
+    color: rgb(176, 178, 179);
 
+}
+
+.add-task-button:hover{
+    background-color: rgb(71, 173, 241)
+}
+
+.add-section-button:hover{
+    background-color: rgb(71, 173, 241) ;
 }
 
 .add-section-button{
@@ -180,7 +187,6 @@ main{
     padding: 0.5%;
     border: 0;
     border-radius: 5px;
-    background-color: white;
     border: 1px solid rgb(176, 178, 179);
     color: rgb(176, 178, 179);
 }
