--- a/css/style.css
+++ b/css/style.css
@@ -14,76 +14,46 @@
 /* sales = rgb(176, 201, 38) */
 
 /* tasktype configuration */
-.editorial{
+
+.task{
     margin: 0.5%;
     height: 5%;
     width: 5%;
-    background-color: rgb(71, 173, 241);
-    border: 1px solid rgb(71, 173, 241);
-    border-radius: 10px;
     color: white;
     padding: 0.3%;
     font-size: 70%;
+    border-radius: 10px;
+}
+
+
+.editorial{   
+    background-color: rgb(71, 173, 241);
+    border: 1px solid rgb(71, 173, 241);  
 }
 
 .q1-goals{
-    margin: 0.5%;
-    height: 5%;
-    width: 5%;
     background-color: rgb(155, 113, 227);
     border: 1px solid rgb(155, 113, 227);
-    border-radius: 10px;
-    color: white;
-    padding: 0.3%;
-    font-size: 70%;
 }
 
 .recruiting{
-    margin: 0.5%;
-    height: 5%;
-    width: 5%;
     background-color: rgb(100, 192, 169);
     border: 1px solid rgb(100, 192, 169);
-    border-radius: 10px;
-    color: white;
-    padding: 0.3%;
-    font-size: 70%;
 }
 
 .mobile{
-    margin: 0.5%;
-    height: 5%;
-    width: 5%;
     background-color: rgb(241, 157, 49) ;
     border: 1px solid rgb(241, 157, 49) ;
-    border-radius: 10px;
-    color: white;
-    padding: 0.3%;
-    font-size: 70%;
 }
 
 .website{
-    margin: 0.5%;
-    height: 5%;
-    width: 5%;
     background-color: rgb(216, 99, 161) ;
     border: 1px solid rgb(216, 99, 161) ;
-    border-radius: 10px;
-    color: white;
-    padding: 0.3%;
-    font-size: 70%;
 }
 
 .sales{
-    margin: 0.5%;
-    height: 5%;
-    width: 5%;
     background-color: rgb(176, 201, 38) ;
     border: 1px solid rgb(176, 201, 38) ;
-    border-radius: 10px;
-    color: white;
-    padding: 0.3%;
-    font-size: 70%;
 }
 
 
@@ -94,6 +64,7 @@
     border-radius: 50%;
     margin-right: 0.5%;
 }
+
 /* cross configuration */
 
 .cross{
